# sciona-atoms-geo

./: .gitignore  README.md  pyproject.toml
data/: audit_manifest.json
data/expansions/: README.md
data/references/: registry.json
data/review_bundles/: geo_augmentation.review_bundle.json  geo_geospatial_sensors.review_bundle.json  geo_losses.review_bundle.json
src/sciona/atoms/geo/: __init__.py
src/sciona/atoms/geo/augmentation/: __init__.py  atoms.py  cdg.json  references.json  witnesses.py
src/sciona/atoms/geo/geospatial_sensors/: __init__.py  atoms.py  cdg.json  references.json  witnesses.py
src/sciona/atoms/geo/losses/: __init__.py  atoms.py  atoms_torch.py  cdg.json  references.json  witnesses.py
tests/: test_geo_augmentation_behavior.py  test_geo_geospatial_sensors_behavior.py  test_geo_losses_behavior.py
